tests/ui/project/type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch.rs:38:9
   |
38 |         None => {} //~ ERROR mismatched types
   |         ^^^^ expected enum `type_mismatch::__FooProjection`, found enum `std::option::Option`
   |
   = note: expected type `type_mismatch::__FooProjection<'_, {integer}, {integer}, _, _>`
              found type `std::option::Option<_>`

error[E0308]: mismatched types
  |
  = note: expected type `type_mismatch_span_issue::__FooProjection<'_, {integer}, {integer}, _, _>`
             found type `std::option::Option<_>`
